# hwinfo

./: CMakeLists.txt  hwinfo.c
src/hd/: bios.h  block.h  braille.h  cpu.h  drm.h  dvd.h  edd.h  fb.h  floppy.h  hal.h  hd.c  hd.h  hddb.c  hddb.h  hddb_int.h  hdp.c  isa.h  isdn.h  version.h.in
src/ids/: CMakeLists.txt
src/isdn/: CMakeLists.txt
src/isdn/cdb/: CMakeLists.txt
